# jwt-drf-aut

./: .gitignore  README.md  db_schema.md  logs.txt  pyproject.toml
config/: settings.py  swagger.py  urls.py
tests/: __init__.py
tests/users/: __init__.py  test_auth.py  test_models.py
users/: admin.py  decorators.py  mock_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_permission_options_alter_role_options_and_more.py  0003_remove_user_idx_users_email_and_more.py  0004_remove_permission_permissions_action_81b528_idx_and_more.py
